# msvc-std-array-module-bug

./: CMakeLists.txt
base_module/: CMakeLists.txt  base_module_interface.ixx
user_module/: CMakeLists.txt  user_module_interface.ixx
